Added two devices to device_models.json: the Argo Navis digital setting circle
and the Meade ETX70 with the slow Autostar controller. (revision 5739)
(TODO: A way to update that list automatically on plug-in update.)
Fixed a bug: Closing the Telescope Configuration window with the Esc key
caused the main plug-in window to remain in a disabled state. (revision 5739)

[0.1.8] (2010-01-12) (revision 5640)
Fixed bug with selection marker. (revision 5407)
Added content to the "About" tab and renamed it to "Help". (revision 5603)
Propagated changes in texture creation from the main code. (revision 5613)

[0.1.7] (2009-11-10)
Interface changes:
- tabbed dialog;
- added Options tab;
- added About tab;
- added an option to enable/disable external telescope server executables;
- added an option to set the telescope server executables directory.
Added experimental support for embedded telescope servers for the Dummy,
Meade LX200 and Celestron NexStar devices.

[0.1.6] (2009-10-05)
Moved the custom stylesheets to files embedded as Qt resources. (rev. 5093-5094)
Modified the plug-in to conform to the Stellarium's new GUI paradigm. (r 5093)
Fixed a forgotten tooltip in TelescopeConfigurationDialog. (r 5109)

[0.1.5] (2009-09-30)
The telescope list alternate-background style is night mode compatible now.
Changed the layout of TelescopeConfigurationDialog, using a QToolBox to
contains most of the controls.
Reduced the number of use cases to two: an internally launched server and
a connection to external software or a remote computer.
Replaced the Serial Port QSpinBox with an editable QComboBox to allow greater
flexibility on Linux and to enable Mac users to use the plug-in. :)
The telescopes.json file of this version is not compatible with the previous
one, so clean your /modules/TelescopeControl directory.
This version hasn't been tested on Windows.

[0.1.4] (2009-09-29)
Fixed a crash when the telescope servers directory is missing.